--- a/arlington-mobility-hubs.html
+++ b/arlington-mobility-hubs.html
@@ -189,13 +189,13 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                Managed this mobility hub guidebook and concept design project for the Metropolitan Washington Council of Governments and Arlington County. Working in tandem with colleagues and the client, we defined and customized a mobility hub planning process for their jurisdiction. I led the prototype design, including the placement of hub elements, and substantially updated the final concept design rendering to bring the client's vision to life. As primary author of the final report, I created information sheets for each hub element and also did the graphic design and layout.
+                Working in tandem with colleagues and the client, I led our project team to define and customize a mobility hub planning process for their jurisdiction. I also guided the prototype design, including the placement of hub elements and substantially updated the concept design rendering to bring the client's vision to life. I created information sheets for each hub element and also produced the graphic design and layout of the report.
               </p>
             </div>
             <div class="portfolio-description">
               <h2>Credit</h2>
               <p>
-                This project represents a collective effort that included staff from Toole Design Group and Arlington County. I did not produce the original pilot concept rendering.
+                This project represents a collective effort that included staff from Toole Design Group and Arlington County. I did not produce the first draft of the pilot concept rendering.
               </p>
             </div>
           </div>
