--- a/philadelphia-vz-psap.html
+++ b/philadelphia-vz-psap.html
@@ -198,13 +198,13 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                The City of Philadelphia's Pedestrian Safety Action Plan identified pedestrian safety issues and corresponding policy and design solutions. I authored the plan's policy recommendations and the content for all systemic roadway safety design measure information sheets.</li>
+                The City of Philadelphia's Pedestrian Safety Action Plan identified pedestrian safety issues and corresponding policy and design solutions. I authored the plan's policy recommendations and the content for all systemic safety design measure information sheets.</li>
               </p>
             </div>
             <div class="portfolio-description">
               <h2>Credit</h2>
               <p>
-                The Action Plan was a collaborative effort with input from staff at Toole Design Group, WSP, and the City of Philadelphia. WSP conducted the safety analysis.
+                The Action Plan was a collaborative effort with input from staff at Toole Design Group, WSP, and the City of Philadelphia. WSP conducted the safety analysis that informed the policy and systemic countermeasure recommendations.
               </p>
             </div>
           </div>
