--- a/northern-gateway.html
+++ b/northern-gateway.html
@@ -162,11 +162,11 @@
                 <div class="swiper-slide">
                   <center><img src="assets/img/portfolio/northern-gateway-b.png" alt="Wayfinding System Preferred Sign Family."></center>
                 </div>
-
+<!--
                 <div class="swiper-slide">
                   <center><img src="assets/img/portfolio/northern-gateway-c.png" alt="Wayfinding Kiosk Information Sheet."></center>
                 </div>
-
+-->
                 <div class="swiper-slide">
                   <center><img src="assets/img/portfolio/northern-gateway-d.png" alt="Photo from charrette at community meeting."></center>
                 </div>
@@ -188,13 +188,13 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                This new Wayfinding System and Signage Plan was developed to inform, guide, and navigate residents and visitors to, from, and throughout the Northern Gateway area of Prince George's County. The project extent is adjacent to the northeastern border of the District of Columbia and includes vibrant commercial districts on University Boulevard, new Purple Line transit stations, and numerous community destinations such as schools, libraries, and services. I presented at two project stakeholder meetings and the first community meeting. I also created and led a bilingual (English and Spanish) charrette activity. I worked with the client and Prime consultant to envision the wayfinding sign family and collaborated with our graphic design team to produce the initial draft concept. I then revised the draft sign concepts using the Adobe Creative Suite, based on community and agency partner feedback.</li>
+                This new Wayfinding System and Signage Plan was developed to inform, guide, and navigate residents and visitors to, from, and throughout the Northern Gateway area of Prince George's County. The project extent is adjacent to the northeastern border of the District of Columbia and includes vibrant commercial districts on University Boulevard, new Purple Line transit stations, and numerous community destinations such as schools, libraries, and other services. I presented at two project stakeholder meetings and the first community meeting. I also created and led a bilingual (English and Spanish) charrette activity. I worked with the client and Prime consultant to envision the wayfinding sign family and collaborated with our graphic design team to produce the initial draft concept. I then revised the draft sign concepts using the Adobe Creative Suite, based on community and agency partner feedback.</li>
               </p>
             </div>
             <div class="portfolio-description">
               <h2>Credit</h2>
               <p>
-                Initial sign prototypes were produced collaboratively with graphic design colleagues at Toole Design Group with engineering review. Project summary report written by the Prime consultant. 
+                Initial sign prototypes were produced collaboratively with graphic design colleagues at Toole Design Group, with engineering review. Project summary report written by the Prime consultant. 
               </p>
             </div>
           </div>
