--- a/m-ncppc-vz-toolkit.html
+++ b/m-ncppc-vz-toolkit.html
@@ -198,7 +198,7 @@
             <div class="portfolio-description">
               <h2>Credit</h2>
               <p>
-                The toolkit drew from guidance originally developed for NCHRP Research Report 926, FHWA, NACTO, and other sources. The client incorporated information from the Montgomery County Bicycle Master Plan and their graphic design team was responsible for the document layout. 
+                The toolkit drew from guidance originally developed for NCHRP Research Report 926, FHWA, AASHTO, and other sources. The client incorporated information from the Montgomery County Bicycle Master Plan and their graphic design team was responsible for the document layout. 
               </p>
             </div>
           </div>
