--- a/walk-roll-lv.html
+++ b/walk-roll-lv.html
@@ -212,7 +212,7 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                The first first active transportation plan in this bi-county region at the eastern edge of the Rust Belt, Walk/Roll Lehigh Valley articulates actionable recommendations and priority projects to make walking and biking safer and more accessible to people of all ages and abilities across its diverese urban and rural communities. I analyzed regional crash data, developed the pedestrian network recommendations, and wrote the safety and pedestrian sections of plan. I also produced PowerPoint presentations for public meetings and edited the maps for the final plan.</li>
+                The first first active transportation plan in this bi-county region, Walk/Roll Lehigh Valley articulates actionable recommendations and priority projects to make walking and biking safer and more accessible to people of all ages and abilities across the diverese urban and rural communities at the eastern edge of the Rust Belt. I analyzed regional crash data, developed the pedestrian network recommendations, and wrote the safety and pedestrian sections of plan. I also produced PowerPoint presentations for public meetings and edited the maps for the final plan.</li>
               </p>
             </div>
             <div class="portfolio-description">
