--- a/pbic-arterials.html
+++ b/pbic-arterials.html
@@ -202,7 +202,7 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                We outlined safety challenges on arteiral streets and systemic roadway design treatments to improve pedestrian safety and health. I developed the theme, concepts, slides, and case studies. It was presented to a national audience.</li>
+                We outlined safety challenges on arteiral streets and systemic roadway design treatments to improve pedestrian safety and health. I developed the concepts, slides, and case studies. It was presented to a national audience.</li>
               </p>
             </div>
             <div class="portfolio-description">
