--- a/nchrp-20-07-task-420.html
+++ b/nchrp-20-07-task-420.html
@@ -212,13 +212,13 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                This NCHRP research project explored the state of bicycle signals in the United States including current agency implementation practices, how road users understand this type of traffic signal, and needs for future research. I developed structured interview questions to identify current practices and conducted interviews with transportation agency staff. I then analyzed the interview results and co-wrote the interview chapter of the report.</li>
+                This NCHRP project explored the state of bicycle signals in the United States including current agency implementation practices, how road users understand this type of traffic signal, and needs for future research. I developed structured interview questions to identify current practices and conducted interviews with transportation agency staff. I then analyzed the interview results and co-wrote the corresponding chapter of the report.</li>
               </p>
             </div>
             <div class="portfolio-description">
               <h2>Credit</h2>
               <p>
-                This project was a collaborative effort by staff at Portland State University, Oregon State University, and Toole Design Group. Staff at transportation agencies across the country graciously provided their insights during interviews with the project team.
+                This project was a collaborative effort by many staff at Portland State University, Oregon State University, and Toole Design Group. Staff at transportation agencies across the country graciously provided their insights during interviews with the project team.
               </p>
             </div>
           </div>
