--- a/ite-micromobility.html
+++ b/ite-micromobility.html
@@ -185,7 +185,7 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                Winning solution to the 2020 ITE Micromobility Design Challenge. I conducted demographic, economic, and transportation research on the study corridor, neighborhood, and host city. Alongside engineering colleagues, I participated in multiple collaborateive multimodal roadway reallocation design and corridor economic revitalization charrettes. I provided a critique of draft safety treatments and proposed additional safety recommendations consistent with the traffic and safety analyses. I graphically communicated thet corridor engineering concpet using Adobe Illustrator, wrote sections of the report, laid out the report in Adobe InDesign and served as the final editor responsible for submitting our team's entry.</li>
+                Winning solution to the 2020 ITE Micromobility Design Challenge. I conducted demographic, economic, and transportation research on the study corridor, neighborhood, and host city. Alongside engineering colleagues, I participated in multiple collaborative multimodal roadway reallocation design and corridor economic revitalization charrettes. I provided a critique of draft safety treatments and proposed additional safety recommendations consistent with the traffic and safety analyses. I graphically communicated thet corridor engineering concpet using Adobe Illustrator, wrote sections of the report, laid out the report in Adobe InDesign and served as the final editor responsible for submitting our team's entry.</li>
               </p>
             </div>
             <div class="portfolio-description">
