--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="container">
         <div class="section-title">
           <h2>About</h2>
-          <p>Thomas has dedicated the past seven years of his career to creating places and multimodal systems that welcome people of all ages and abilities to move freely and comfortably. By working with government, private sector, and non-profit stakeholders to develop transportation plans, policies, and programs, he helps decisionmakers guide infrastructure investments that align with their community's values.</p>
+          <p>Thomas has dedicated the past seven years of his career to creating places and multimodal systems where people of all ages and abilities to move freely and comfortably. By working with government, private sector, and non-profit stakeholders to develop transportation plans, policies, and programs, he helps decisionmakers guide infrastructure investments that align with their community's values.</p>
           <br>
           <p>He has managed a diverse array of transportation projects including Vision Zero, bikeshare, micromobility, design guidance, and wayfinding efforts. He has helped lead State Highway Safety Plans, Vision Zero Action Plans, and Safe Routes to School plans; conducted complex safety, demographic and economic analyses; and planned public transit routes, fares, and schedules. In addition, he has evaluated transportation programs on behalf of cities and Metropolitan Planning Organizations.</p>
           <br>
