--- a/index.html
+++ b/index.html
@@ -243,7 +243,6 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
-
             <div class="progress">
               <span class="skill">Public and Stakeholder Engagement <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
@@ -252,7 +251,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Spatial Analysis and Graphic Communication <i class="val">70%</i></span>
+              <span class="skill">GIS and Graphic Communication <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
