--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Vision Zero and Safe Systems Analysis <i class="val">85%</i></span>
+              <span class="skill">Vision Zero and Safe Systems Program Support <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -251,7 +251,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">GIS and Graphic Communication <i class="val">70%</i></span>
+              <span class="skill">Mapping and Graphic Communication <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
