--- a/index.html
+++ b/index.html
@@ -78,6 +78,19 @@
       <p><span class="typed" data-typed-items="Sustainable, Healthy, Safe "></span>Mobility Planning</p>
     </div>  
     
+<div>
+    <a href="#about" class="scroll-down d-flex align-items-center justify-content-center">Scroll <i class="bi bi-mouse"></i></a>
+  </div>
+
+<!--    
+    <div id="scroll-fancy05" class="demo">
+      <a href="#about" class="scroll-fancy h6 d-flex align-items-center justify-content-center"><span></span><h7></h7></a>
+    </div>
+  -->
+  </section>
+
+
+
   </section>
   <!-- End Hero -->
 
