--- a/index.html
+++ b/index.html
@@ -78,18 +78,29 @@
       <p><span class="typed" data-typed-items="Sustainable, Healthy, Safe "></span>Mobility Planning</p>
     </div>  
 
-<div>
+  <!-- Scroll Blue Bottom Right 
+  <div>
     <a href="#about" class="scroll-down d-flex align-items-center justify-content-center">Scroll <i class="bi bi-mouse"></i></a>
   </div>
-<!--        
+  -->
+
+  <!-- Scroll Middle Clear -->
+
+  <!--
     <div id="scroll-fancy02" class="demo">
       <a href="#about" class="scroll-fancy h6 d-flex align-items-center justify-content-center"><span></span><h7></h7></a>
     </div>
+  -->
+
+  <div id="scrolly" class ="demo" data-aos ="fade-in">
+    <a href="#about"  d-flex align-items-center justify-content-center"><i class="bi bi-arrow-down-circle-fill"></i></a>
+    </div>
+    
+  <!--
+    <div id="scrolly" class ="demo" data-aos ="fade-in">
+      <a href="#about"  d-flex align-items-center justify-content-center">Scroll <i class="bi bi-mouse"></i></a>
+  </div>
 -->
-
-  </section>
-
-
 
   </section>
   <!-- End Hero -->
@@ -748,13 +759,22 @@
 
   </main><!-- End #main -->
 
+  
   <!-- ======= Footer ======= -->
-  <footer id="footer">
+<!--
+    <footer id="footer">
     <div class="container">
-      <div class="linkedin">
+      <div class="linkedin text-center">
+        <a href="mailto:thomasnhillman@gmail.com" class="email"><i class="bx bx-envelope"></i></a> &nbsp<a href="https://www.linkedin.com/in/thomas-h-8779a9a" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>     
       </div>
+      <!--
+      <div class="linkedin">
+        <a href="https://www.linkedin.com/in/thomas-h-8779a9a" title="LinkedIn"  target="_blank"><i class="bi bi-linkedin"></i></a>
+      </div>
+-->
     </div>
-  </footer><!-- End  Footer -->
+  </footer>
+  <!-- End  Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
