--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
     <div class="hero-container" data-aos="fade-in">
       <p><span class="typed" data-typed-items="Sustainable, Healthy, Safe "></span>Mobility Planning</p>
     </div>  
+    <div>
       <a href="#about" class="scroll-down d-flex align-items-center justify-content-center"><i class="bi bi-arrow-down-short bi bi-arrow-down-circle"></i></a>
-    
+    </div>
   </section>
   <!-- End Hero -->
 
