--- a/arlington-mobility-hubs.html
+++ b/arlington-mobility-hubs.html
@@ -195,7 +195,7 @@
             <div class="portfolio-description">
               <h2>Credit</h2>
               <p>
-                This project represents a collective effort that included staff from Toole Design Group and Arlington County. I did not produce the first draft of the pilot concept rendering.
+                Staff from Arlington County and Toole Design collaborated to produce this report. The first draft of the pilot concept rendering was produced by Vincent Yi.
               </p>
             </div>
           </div>
