--- a/arlington-mobility-hubs.html
+++ b/arlington-mobility-hubs.html
@@ -189,7 +189,7 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                Working in tandem with colleagues at Toole Design and the client, I led our project team to define and customize a mobility hub planning process for their jurisdiction. I also guided the prototype design, including the placement of hub elements and substantially updated the concept design rendering to bring the client's vision to life. I created information sheets for each hub element and also produced the graphic design and layout of the report.
+                Working in tandem with internal colleagues and the client, I led our project team to define and customize a mobility hub planning process for their jurisdiction. I guided the prototype design, including the selection and placement of hub elements, and substantially updated the concept design rendering using Photoshop and Illustrator to bring the client's vision to life. I created information sheets for each hub element and also produced the graphic design and layout of the report.
               </p>
             </div>
             <div class="portfolio-description">
