--- a/arlington-mobility-hubs.html
+++ b/arlington-mobility-hubs.html
@@ -189,7 +189,7 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                Working in tandem with internal colleagues and the client, I led our project team to define and customize a mobility hub planning process for their jurisdiction. I guided the prototype design, including the selection and placement of hub elements, and substantially updated the concept design rendering using Photoshop and Illustrator to bring the client's vision to life. I created information sheets for each hub element and also produced the graphic design and layout of the report.
+                Working in tandem with colleagues in Portland, Los Angeles, and Arlington County, I coordinated and led the project team to define a mobility hub planning process customized to the client’s needs. I created two-page information sheets for each of 17 mobility hub element that convey their purpose, design considerations, and which resources are most useful for local implementation. Throughout the project, I guided the concurrent design of a pilot mobility hub, including selection and placement of appropriate transportation, placemaking, and information components. I also substantially updated the pilot hub concept design rendering for the final report, using Photoshop and Illustrator to bring the client's vision to life. Finally, I served as lead author of the summary report and created its graphic design and layout.
               </p>
             </div>
             <div class="portfolio-description">
