--- a/arlington-mobility-hubs.html
+++ b/arlington-mobility-hubs.html
@@ -189,13 +189,17 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                Working in tandem with colleagues in Portland, Los Angeles, and Arlington County, I coordinated and led the project team to define a mobility hub planning process customized to the client’s needs. I created two-page information sheets for each of 17 mobility hub element that convey their purpose, design considerations, and which resources are most useful for local implementation. Throughout the project, I guided the concurrent design of a pilot mobility hub, including selection and placement of appropriate transportation, placemaking, and information components. I also substantially updated the pilot hub concept design rendering for the final report, using Photoshop and Illustrator to bring the client's vision to life. Finally, I served as lead author of the summary report and created its graphic design and layout.
+                This project created a guidebook and pilot concept design for the future planning and implementation of mobility hubs that seamlessly integrate multiple transportation modes between vibrant activity centers. 
+              </p>
+              <br>
+              <p>
+                I coordinated a diverse team to define a mobility hub planning process customized to help the client meet their specific mobility and placemaking goals. I created two-page information sheets for 17 discrete mobility hub elements—such as bikeshare stations, lighting, and transit stops—that convey their purpose, design considerations, and the most helpful resources to guide local implementation. Throughout the project, I led the concurrent design of a pilot mobility hub, including selection and placement of appropriate transportation, placemaking, and information components. I also substantially updated the pilot hub concept design rendering for the final report, using Photoshop and Illustrator to bring the client's vision to life. Finally, I served as lead author of the summary report and created its graphic design and layout.
               </p>
             </div>
             <div class="portfolio-description">
               <h2>Credit</h2>
               <p>
-                Staff from Arlington County and Toole Design collaborated to produce this report. The first draft of the pilot concept rendering was produced by Vincent Yi.
+                The project was made possible by a grant from COG. The team included colleagues from Toole Design's Portland, Los Angeles, and Silver Spring offices and counterparts at Arlington County. The first draft of the pilot concept rendering was produced by Vincent Yi. 
               </p>
             </div>
           </div>
