--- a/arlington-mobility-hubs.html
+++ b/arlington-mobility-hubs.html
@@ -189,17 +189,17 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                This project created a guidebook and pilot concept design for the future planning and implementation of mobility hubs that seamlessly integrate multiple transportation modes between vibrant activity centers. 
+                The Mobilty Hub guidebook and concept design facilitate the planning and implementation of integrated infrastructure and services that allow people to comfortably, conveniently, and sustainaby travel between vibrant activity centers throughout Arlington County and beyond. 
               </p>
               <br>
               <p>
-                I coordinated a diverse team to define a mobility hub planning process customized to help the client meet their specific mobility and placemaking goals. I created two-page information sheets for 17 discrete mobility hub elements—such as bikeshare stations, lighting, and transit stops—that convey their purpose, design considerations, and the most helpful resources to guide local implementation. Throughout the project, I led the concurrent design of a pilot mobility hub, including selection and placement of appropriate transportation, placemaking, and information components. I also substantially updated the pilot hub concept design rendering for the final report, using Photoshop and Illustrator to bring the client's vision to life. Finally, I served as lead author of the summary report and created its graphic design and layout.
+                As Project Manager, I coordinated a diverse team to define a mobility hub planning process customized for the client's mobility and placemaking goals. I created two-page information sheets for 17 discrete mobility hub elements—such as bikeshare stations, transit stops, and lighting—that convey their purpose, design considerations, and the most useful resources to guide local implementation. Concurrenty, I led the design of a pilot mobility hub, including selection and placement of appropriate transportation, placemaking, and information components. I also substantially updated the pilot hub concept design rendering for the final report, using Photoshop and Illustrator to bring the client's vision to life. Finally, I served as lead author of the summary report and created its graphic design and layout.
               </p>
             </div>
             <div class="portfolio-description">
               <h2>Credit</h2>
               <p>
-                The project was made possible by a grant from COG. The team included colleagues from Toole Design's Portland, Los Angeles, and Silver Spring offices and counterparts at Arlington County. The first draft of the pilot concept rendering was produced by Vincent Yi. 
+                This project was made possible by a grant from COG. The team included colleagues from Toole Design's Portland, Los Angeles, and Silver Spring offices and counterparts at Arlington County. The first draft of the pilot concept rendering was produced by Vincent Yi. 
               </p>
             </div>
           </div>
