--- a/cvb-atp.html
+++ b/cvb-atp.html
@@ -206,7 +206,7 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                A significant update from the City's previous design standards, these active transportation design guidelines encourage consistent implementation of safer and more comfortable bicycle and pedestrian facilities on City streets. I curated and tailored state-of-practice guidelines for use in Virginia Beach, consistent with context-sensitive approaches in AASHTO, NACTO, FHWA, and other leading national design guidance resources. I coordinated the guideline production with the client and edited the final guidelines based on their feedback.</p>
+                A significant update from the City's previous design standards, these active transportation design guidelines encourage consistent implementation of safer and more comfortable bicycle and pedestrian facilities on City streets. I curated and tailored state-of-practice guidelines for use in Virginia Beach, consistent with context-sensitive approaches from AASHTO, NACTO, FHWA, and other leading national design guidance resources. I coordinated the guideline production with the client and edited the final guidelines based on their feedback.</p>
             </div>
             <div class="portfolio-description">
               <h2>Credit</h2>
