--- a/m-ncppc-vz-toolkit.html
+++ b/m-ncppc-vz-toolkit.html
@@ -192,13 +192,13 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                The Montgomoery Planning Vision Zero Community Toolkit describes roadway design treatments available for use in the community to improve safety and comfort for all road users. I managed all aspects of project and led selection of the most essential safety tools for inclusion. I describerd Vision Zero and Systemic Safety concepts for a general audience in plain langauge and developed information sheets detailing 30+ roadway safety countermeasures, including their purposes, uses, safety benefits and engineering details.</li>
+                The Montgomoery Planning Vision Zero Community Toolkit describes roadway design treatments available for use in the community to improve safety and comfort for all road users. I managed the project timeline and budget and led selection of the most essential safety tools for inclusion. I describerd Vision Zero and Systemic Safety concepts for a general audience in plain langauge and developed information sheets detailing 30+ roadway safety countermeasures, including their purposes, uses, safety benefits and engineering details.</li>
               </p>
             </div>
             <div class="portfolio-description">
               <h2>Credit</h2>
               <p>
-                The toolkit drew from guidance originally developed for NCHRP Research Report 926, FHWA, AASHTO, and other sources. The client incorporated information from the Montgomery County Bicycle Master Plan and their graphic designer was responsible for the document layout. 
+                The toolkit built on guidance originally developed for NCHRP, FHWA, AASHTO, and other audiences. The client incorporated additional information sheets from the Montgomery County Bicycle Master Plan and was responsible for the document layout. 
               </p>
             </div>
           </div>
