--- a/arlington-mobility-hubs.html
+++ b/arlington-mobility-hubs.html
@@ -189,7 +189,7 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                The Arlington mobilty hub guidebook and concept design facilitate the future planning and implementation of integrated infrastructure and services that allow people to comfortably, conveniently, and sustainaby travel between vibrant activity centers throughout the County and beyond. 
+                This mobilty hub guidebook and concept design facilitate the future planning and implementation of integrated infrastructure and services that allow people to comfortably, conveniently, and sustainaby travel between vibrant activity centers throughout Arlington County and beyond. 
               </p>
               <br>
               <p>
@@ -199,7 +199,7 @@
             <div class="portfolio-description">
               <h2>Credit</h2>
               <p>
-                This project was made possible by a grant from COG. The team included colleagues from Toole Design's Portland, Los Angeles, and Silver Spring offices and counterparts at Arlington County. The first draft of the pilot concept rendering was produced by Vincent Yi. 
+                The project was made possible by a grant from COG. The team included colleagues from Toole Design's Portland, Los Angeles, and Silver Spring offices and counterparts at Arlington County. The first draft of the pilot concept rendering was produced by Vincent Yi. 
               </p>
             </div>
           </div>
