--- a/arlington-mobility-hubs.html
+++ b/arlington-mobility-hubs.html
@@ -189,11 +189,8 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                This mobilty hub guidebook and concept design facilitate the future planning and implementation of integrated infrastructure and services that allow people to comfortably, conveniently, and sustainaby travel between vibrant activity centers throughout Arlington County and beyond. 
-              </p>
-              <br>
               <p>
-                As Project Manager, I coordinated a diverse team that defined a mobility hub planning process tailored to the client's unique mobility and placemaking goals. I created two-page information sheets for 17 discrete mobility hub elements—such as bikeshare stations, transit stops, and area lighting—that convey their purpose, design considerations, and the most useful resources to guide local implementation. Concurrenty, I led the design of a pilot mobility hub, including selection and placement of appropriate transportation, placemaking, and information components. I also substantially updated the pilot hub concept design rendering for the final report, using Photoshop and Illustrator to bring the client's vision to life. Finally, I served as lead author of the summary report and created its graphic design and layout.
+                As Project Manager, I coordinated a diverse team that defined a mobility hub planning process tailored to the client's unique goals. I created two-page information sheets for 17 discrete mobility hub elements—such as bikeshare stations, transit stops, and area lighting—that convey their purpose, design considerations, and the most useful resources to guide local implementation. Concurrenty, I led the design of a pilot mobility hub, including selection and placement of appropriate transportation, placemaking, and information components. I also substantially updated the pilot hub concept design rendering for the final report, using Photoshop and Illustrator to bring the client's vision to life. Finally, I served as lead author of the summary report and created its graphic design and layout.
               </p>
             </div>
             <div class="portfolio-description">
