--- a/arlington-mobility-hubs.html
+++ b/arlington-mobility-hubs.html
@@ -196,7 +196,7 @@
             <div class="portfolio-description">
               <h2>Credit</h2>
               <p>
-                The project was made possible by a grant from COG. The team included colleagues from Toole Design's Portland, Los Angeles, and Silver Spring offices and counterparts at Arlington County. The first draft of the pilot concept rendering was produced by Vincent Yi. 
+                This project was made possible by a grant from COG. The team included colleagues from Toole Design's Portland, Los Angeles, and Silver Spring offices working alongside counterparts at Arlington County. The first draft of the pilot concept rendering was produced by Vincent Yi. 
               </p>
             </div>
           </div>
