--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
               <h5>2019 - 2021</h5>
               <p><em>Toole Design, Silver Spring, MD </em></p>
               <ul>
-                <li>Managed active transportation projects including design guidelines, bikeshare program support, wayfinding plans, evaluations, and communication toolkits.</li>
+                <li>Managed active transportation projects including community mobility plans, design guidelines, bikeshare program support, wayfinding signage, evaluations, and communication toolkits.</li>
                 <li>Conducted complex demographic, economic, safety, and demand analyses. Recommended Vision Zero and Safe Routes to School street designs, policies, and countermeasures. </li>
                 <li>Communicated planning results via maps, charts, graphics, memos, presentations, and reports.</li>
                 <li>Led public outreach including surveys; workshops; and on-line and in-person events. Engaged community, business, and stakeholder groups.</li>
