--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="container">
         <div class="section-title">
           <h2>About</h2>
-          <p>Thomas helps communities to create safe and comfortable multimodal transportation systems that are welcoming to people of all ages and abilities. By working with public and private stakeholders to develop transportation plans, policies, and programs, he guides infrastructure investments that improve social resilience and climate sustainability.</p>
+          <p>Thomas helps communities to create safe and comfortable multimodal transportation systems that are welcoming to people of all ages and abilities. By working with public and private stakeholders to develop transportation plans, policies, and programs, he facilitates infrastructure investments that improve social resilience and climate sustainability.</p>
           <br>
           <p>He has managed a diverse array of transportation projects including Vision Zero, bikeshare, micromobility, design guidance, and wayfinding efforts. He has helped lead State Highway Safety Plans, Vision Zero Action Plans, and Safe Routes to School plans; conducted complex safety, demographic and economic analyses; and planned public transit routes, fares, and schedules. In addition, he has evaluated transportation programs on behalf of cities and Metropolitan Planning Organizations.</p>
           <br>
