--- a/pbic-arterials.html
+++ b/pbic-arterials.html
@@ -202,13 +202,13 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                We outlined safety challenges on arteiral streets and systemic roadway design treatments to improve pedestrian safety and health. I developed the concepts, slides, and case studies. It was presented to a national audience.</li>
+                The panel outlined safety challenges on arteiral streets and systemic roadway design treatments to improve pedestrian safety and health. I developed the content presented by Toole Design, including the themes, safety analyses, slides, and case studies. The event was presented to a national audience of over 300 attendees.</li>
               </p>
             </div>
             <div class="portfolio-description">
               <h2>Credit</h2>
               <p>
-                The webinar was produced with input and support from colleagues at Toole Design Group and PBIC. PBIC graciously hosted and moderated the webinar, and Dr. Carey McAndrews contributed her own slides and public health perspective.
+                The webinar was produced with input and support from colleagues at Toole Design Group and PBIC. PBIC graciously hosted and moderated, and Dr. Carey McAndrews contributed her own slides and public health perspective.
               </p>
             </div>
           </div>
