--- a/m-ncppc-vz-toolkit.html
+++ b/m-ncppc-vz-toolkit.html
@@ -198,7 +198,7 @@
             <div class="portfolio-description">
               <h2>Credit</h2>
               <p>
-                The toolkit built on guidance originally developed for NCHRP, FHWA, AASHTO, and other audiences. The client incorporated additional information sheets from the Montgomery County Bicycle Master Plan and was responsible for the document layout. 
+                The toolkit built on guidance originally developed by Toole Design for NCHRP, FHWA, AASHTO, and other audiences. Beyond the scope of the project, the client incorporated additional information sheets from the Montgomery County Bicycle Master Plan and was responsible for the document layout. 
               </p>
             </div>
           </div>
