--- a/ite-micromobility.html
+++ b/ite-micromobility.html
@@ -185,13 +185,13 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                Winning solution to the 2020 ITE Micromobility Design Challenge. I conducted demographic, economic, and transportation research on the study corridor, neighborhood, and host city. Alongside engineering colleagues, I participated in multiple collaborative multimodal roadway reallocation design and corridor economic revitalization charrettes. I provided a critique of draft safety treatments and proposed additional safety recommendations consistent with the traffic and safety analyses. I graphically communicated the corridor engineering concpet using Adobe Illustrator, wrote sections of the report, laid out the report in Adobe InDesign and served as the final editor responsible for submitting our team's entry.</li>
+                Winning solution to the <i>2020 ITE Micromobility Sandbox Design Challenge</i>. I conducted demographic, economic, and transportation research on the study corridor, neighborhood, and host city. I co-designed the multimodal roadway reallocation and economic revitalization of the corridor via a series of collaborative charrettes. I provided a critique of draft safety treatments and proposed additional safety recommendations consistent with the traffic and safety analyses. I graphically communicated the corridor engineering concpet using Adobe Illustrator, wrote sections of the report, laid out the report in Adobe InDesign and served as the final editor responsible for submitting our team's entry.</li>
               </p>
             </div>
             <div class="portfolio-description">
               <h2>Credit</h2>
               <p>
-                The team, including Gwen Shaw, Ella Ryan, myself, Perrin Falkner, and Carly Haithcock worked on nights and weekends over the summer to complete this effort. My colleagues conducted the engineering analysis, produced the corridor engineering CAD diagram that underlies the concept figure, and presented our entry at the ITE conference.
+                The team, including Gwen Shaw, Ella Ryan, myself, Perrin Falkner, and Carly Haithcock worked on nights and weekends over the summer to complete this effort. My colleagues conducted the engineering analysis, produced the corridor engineering CAD diagram that underlies the concept figure, and presented our entry to conference attendees.
               </p>
             </div>
           </div>
