--- a/pbic-arterials.html
+++ b/pbic-arterials.html
@@ -202,7 +202,7 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                The panel outlined safety challenges on arteiral streets and systemic roadway design treatments to improve pedestrian safety and health. I developed the content presented by Toole Design, including the themes, safety analyses, slides, and case studies. The event was presented to a national audience of over 300 attendees.</li>
+                This webinar outlined safety challenges on arteiral streets and systemic roadway design treatments to improve pedestrian safety and health. I developed the content presented by Toole Design, including the themes, safety analyses, slides, and case studies. The event was presented to a national audience of over 300 attendees.</li>
               </p>
             </div>
             <div class="portfolio-description">
