--- a/m-ncppc-vz-toolkit.html
+++ b/m-ncppc-vz-toolkit.html
@@ -192,13 +192,13 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                The Montgomoery Planning <i>Vision Zero Community Toolkit</i> describes roadway design treatments available for use in the community to improve safety and comfort for all road users. I managed the project timeline and budget and led selection of the most essential safety tools for inclusion. I describerd Vision Zero and Systemic Safety concepts for a general audience in plain langauge and developed information sheets detailing 30+ roadway safety countermeasures, including their purposes, uses, safety benefits and engineering details.</li>
+                The Montgomoery Planning Vision Zero Community Toolkit describes roadway design treatments available for use in the community to improve safety and comfort for all road users. I managed the project timeline and budget and led selection of the most essential safety tools for inclusion. I describerd Vision Zero and Systemic Safety concepts for a general audience in plain langauge and developed information sheets detailing 30+ roadway safety countermeasures, including their purposes, uses, safety benefits and engineering details.</li>
               </p>
             </div>
             <div class="portfolio-description">
               <h2>Credit</h2>
               <p>
-                The toolkit built on guidance originally developed by Toole Design for NCHRP, FHWA, AASHTO, and other audiences. Beyond the project scope, the client incorporated additional information sheets from the <i>Montgomery County Bicycle Master Plan</i> and was responsible for the document layout. 
+                The toolkit built on guidance originally developed by Toole Design for NCHRP, FHWA, AASHTO, and other audiences. After receiving the completed project as scoped, the client incorporated additional information sheets from the Montgomery County Bicycle Master Plan and laid out the final public-facing document. 
               </p>
             </div>
           </div>
