--- a/m-ncppc-vz-toolkit.html
+++ b/m-ncppc-vz-toolkit.html
@@ -198,7 +198,7 @@
             <div class="portfolio-description">
               <h2>Credit</h2>
               <p>
-                The toolkit built on guidance originally developed by Toole Design for NCHRP, FHWA, AASHTO, and other audiences. After receiving the completed project as scoped, the client incorporated additional information sheets from the Montgomery County Bicycle Master Plan and laid out the final public-facing document. 
+                The toolkit built on guidance originally developed by Toole Design for NCHRP, FHWA, AASHTO, and other audiences. Upon receipt of the completed project as scoped, the client incorporated additional information sheets from the Montgomery County Bicycle Master Plan and laid out the final public-facing document. 
               </p>
             </div>
           </div>
