--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
       <div class="container">
         <div class="section-title">
           <h2>About</h2>
-          <p>Thomas leads communities to create safe and comfortable multimodal transportation systems that welcome people of all ages and abilities. By working with public and private stakeholders to develop transportation plans, policies, and programs, he facilitates infrastructure investments that improve social and climate sustainability.</p>
+          <p>Thomas helps create safe and comfortable multimodal transportation systems that welcome people of all ages and abilities. By working with community, public, and private stakeholders to develop transportation plans, policies, and programs, he facilitates sustainable infrastructure investments.</p>
           <br>
-          <p>He has managed a diverse array of transportation projects including Vision Zero, bikeshare, micromobility, design guidance, and wayfinding efforts. He has helped spearhead State Highway Safety Plans, Vision Zero Action Plans, and Safe Routes to School plans; conducted complex safety, demographic and economic analyses; and planned public transit routes, fares, and schedules. In addition, he has evaluated transportation programs on behalf of cities and Metropolitan Planning Organizations.</p>
+          <p>He has managed a diverse array of transportation projects in areas including Vision Zero, shared mobility, and facility design guidance. He has helped spearhead Pedestrian Safety Action Plans, Highway Safety Plans, and Safe Routes to School plans; conducted complex safety, demographic and economic analyses; and planned public transit routes, fares, and schedules. He has presented to diverse audiences and co-planned community transportation improvements with authentic public input. In addition, he has evaluated transportation programs on behalf of cities and Metropolitan Planning Organizations.</p>
           <br>
           <p>Thomas earned his Master's degree in City and Regional Planning, with a focus on transportation, in 2015 from the Edward J. Bloustein School at Rutgers University. He holds a BA in Political Studies with a minor in Latin American Studies from Bard College.</p>
         </div>
@@ -211,13 +211,35 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Skills</h2>
-          <!--<p>A divergent thinker with a growth mindset, Thomas is always learning new ways to solve transportaion problems.</p> -->
+          <h2>Areas of Expertise</h2>
+          <p>Thomas is a divergent thinker with a growth mindset, always learning or helping to develop leading practices and new ways to solve challenging transportaion problems. He is a generalist with experience in the following areas.</p>
           </div>
+          <div class="row">
+            <div class="col-md-5" data-aos="fade-up">
+              <ul>
+                <li>Vision Zero and Systemic Safety</li>
+                <li>GIS and Data Analysis</li>
+                <li>Program Development and Support</li>
+                <li>Research and Evaluation</li>
+              </ul>  
+            </div>
+            <div class="col-md-5" data-aos="fade-up" data-aos-delay="100">
+              <ul>
+                <li>Public and Stakeholder Engagement</li>
+                <li>Web and Graphic Communication</li>
+                <li>Project and Task Management</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+</span>
 
-        <div class="row skills-content">
 
-          <div class="col-lg-6" data-aos="fade-up">
+
+
+
+
+<!-- OLD SKILLS SECTION WITH PROGRESS BARS
 
             <div class="progress">
               <span class="skill">Transportation Planning <i class="val">100%</i></span>
@@ -262,9 +284,8 @@
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-
           </div>
-          
+-->          
 
         </div>
 
